// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Orders Component should match snapshot 1`] = `
<div>
  <OrderControls />
  <section
    class="order"
  >
    <div
      class="container"
      id="sec"
    >
      <OrderCards
        orders={
          Array [
            Object {
              "id": 1,
              "orderAddress": "52, Enitan str, Aguda, Surulere, Lagos State",
              "orderDate": "30 August, 2016",
              "orderNo": "12",
              "orderStatus": "Pending",
              "price": 5000,
            },
            Object {
              "id": 2,
              "orderAddress": "52, Enitan str, Aguda, Surulere, Lagos State",
              "orderDate": "Boiled Yam",
              "orderNo": "54",
              "orderStatus": "In Progress",
              "price": 1200,
            },
          ]
        }
      />
      <div
        class="pagination"
      >
        <a
          href="#"
        >
          «
        </a>
        <a
          class="active"
          href="#"
        >
          1
        </a>
        <a
          href="#"
        >
          2
        </a>
        <a
          href="#"
        >
          »
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`Orders Component should match snapshot 2`] = `
<div>
  <OrderControls />
  <section
    class="order"
  >
    <div
      class="container"
      id="sec"
    >
      <div
        class="new-order"
      >
        <div
          class="order-details"
        >
          There are no Orders
        </div>
      </div>
      <div
        class="pagination"
      >
        <a
          href="#"
        >
          «
        </a>
        <a
          class="active"
          href="#"
        >
          1
        </a>
        <a
          href="#"
        >
          2
        </a>
        <a
          href="#"
        >
          »
        </a>
      </div>
    </div>
  </section>
</div>
`;
